trustfall_core/test_data/tests/parse_errors/invalid_filter_argument_name.parse-error.ron
Err(OtherError("Filter argument names must only contain ASCII alphanumerics or underscore characters: containsåäö", Pos(
  line: 4,
  column: 58,
)))
